--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 diysh = "2.0.2"
+rand = "0.8.5"
+rand_distr = "0.4.3"
 serde = "1.0.177"
 serde_derive = "1.0.177"
 serde_yaml = "0.9.25"
